# grove

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  VISION.md  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.agents/: AGENTS.md
.codex-plugin/: plugin.json
.runner-plugin/: plugin.json
bridge/: pyproject.toml
bridge/scripts/: shadow_false_refusal.py
bridge/src/grove_bridge/: __init__.py  __main__.py  ask_human.py  assistant.py  auth.py  auth_status.py  chat_actions.py  chat_runtime.py  config.py  context_pack.py  grove.py  health.py  legacy_store.py  master.py  notification_rules.py  notifier.py  pane_stream.py  prepared_dispatch.py  project_directory.py  pull_executor.py  slack.py  store.py  task_wakeup.py  team_auth.py  web_app.py
bridge/src/grove_bridge/plugins/: __init__.py  ask_human_reply.py
bridge/tests/: conftest.py  test_api_oracle.py  test_ask_human.py  test_assistant.py  test_auth.py  test_auth_status.py  test_chat_actions.py  test_chat_runtime.py  test_chat_runtime_slack_hook.py  test_chat_runtime_store.py  test_config.py  test_context_pack.py  test_exhaustive_api.py  test_grove.py  test_health.py  test_live_api_coverage.py  test_main_module.py  test_master.py  test_master_chat_store.py  test_notification_rules.py  test_notifier.py  test_pane_stream.py  test_project_directory.py  test_pull_executor.py  test_skeleton_bridge.py  test_slack.py  test_store.py  test_task_wakeup.py  test_web_app.py
docker/: README.md
docs/: DESIGN_audit_and_cost.md  DESIGN_delegate.md  DESIGN_team_auth.md  DESIGN_v1.29_orch_product.md  ROADMAP_v1.1.md  ROADMAP_v1.10.md  ROADMAP_v1.11.md  ROADMAP_v1.12.md  ROADMAP_v1.13.md  ROADMAP_v1.14.md  ROADMAP_v1.15.md  ROADMAP_v1.16.md  ROADMAP_v1.17.md  ROADMAP_v1.18.md  ROADMAP_v1.19.md  ROADMAP_v1.2.md  ROADMAP_v1.20.md  ROADMAP_v1.21.md  ROADMAP_v1.22.md  ROADMAP_v1.23.md  ROADMAP_v1.24.md  ROADMAP_v1.25.md  ROADMAP_v1.26.md  ROADMAP_v1.27.md  ROADMAP_v1.3.md  ROADMAP_v1.4.md  ROADMAP_v1.5.md  ROADMAP_v1.6.md  ROADMAP_v1.7.md  ROADMAP_v1.8.md  ROADMAP_v1.9.md  USER_GUIDE.md  USER_JOURNEYS.md  V1.2_BRAINSTORM.md  V1.6_BRAINSTORM.md  (+23 more)
plugins/grove-viewer/dashboard/: .gitignore  README.md  build.mjs  globals.d.ts  manifest.json  package.json  plugin_api.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  verify.mjs
plugins/grove-viewer/dashboard/mock/: harness.tsx  index.html
plugins/grove-viewer/dashboard/src/: index.tsx  styles.css
plugins/grove-viewer/dashboard/tests/: test_plugin_api.py
(+236 files in other folders)
