[project]
name = "grove-bridge"
version = "0.1.0"
description = "Python bridge scaffold for grove cockpit integrations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.124.0",
  "slack-sdk>=3.39.0",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
grove-bridge-pull = "grove_bridge.pull_executor:main"
grove-slack = "grove_bridge.slack:main"
grove-web = "grove_bridge.web_app:main"

[dependency-groups]
dev = [
  "hatchling>=1.28.0",
  "httpx>=0.28.1",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grove_bridge"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
